--- a/package.json
+++ b/package.json
@@ -6,20 +6,17 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "prettier --write \"src/**/*.js*\""
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-redux": "^7.1.1",
-    "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.1.1"
+    "react-scripts": "3.2.0"
   },
   "devDependencies": {
-    "redux-devtools": "^3.5.0"
+    "prettier": "^1.18.2"
   },
   "eslintConfig": {
     "extends": "react-app"
